--- a/Demo/navigation.html
+++ b/Demo/navigation.html
@@ -262,49 +262,42 @@
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">Demo</div>
+        <div class="logo_name">Démo</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="index.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Page d'accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Page d'accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos de nous</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos de nous</span>
      </li>
      <li>
        <a href="contact.html">
         <i class='bx bxs-contact'></i>
-         <span class="links_name">Contact</span>
+         <span class="links_name">Contactez-nous</span>
        </a>
-       <span class="tooltip">Contact</span>
+       <span class="tooltip">Contactez-nous</span>
      </li>
-     <li>
-        <a href="pricing.html">
-          <i class='bx bxs-purchase-tag-alt' ></i>
-          <span class="links_name">Pricing</span>
-        </a>
-        <span class="tooltip">Pricing</span>
-      </li>
       <li>
         <a href="services.html">
           <i class='bx bxs-briefcase-alt-2' ></i>
-          <span class="links_name">Services</span>
+          <span class="links_name">Prestations de service</span>
         </a>
-        <span class="tooltip">Services</span>
+        <span class="tooltip">Prestations de service</span>
       </li>
     </ul>
   </div>
   <section class="home-section">
-      <div class="text">Demo</div>
+      <div class="text">Démo</div>
   </section>
 
   <script>
