--- a/Demo/about.html
+++ b/Demo/about.html
@@ -268,51 +268,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+    <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">Demo</div>
+        <div class="logo_name">Démo</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="index.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Page d'accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Page d'accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos de nous</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos de nous</span>
      </li>
      <li>
        <a href="contact.html">
         <i class='bx bxs-contact'></i>
-         <span class="links_name">Contact</span>
+         <span class="links_name">Contactez-nous</span>
        </a>
-       <span class="tooltip">Contact</span>
+       <span class="tooltip">Contactez-nous</span>
      </li>
-     <li>
-        <a href="pricing.html">
-          <i class='bx bxs-purchase-tag-alt' ></i>
-          <span class="links_name">Pricing</span>
-        </a>
-        <span class="tooltip">Pricing</span>
-      </li>
       <li>
         <a href="services.html">
           <i class='bx bxs-briefcase-alt-2' ></i>
-          <span class="links_name">Services</span>
+          <span class="links_name">Prestations de service</span>
         </a>
-        <span class="tooltip">Services</span>
+        <span class="tooltip">Prestations de service</span>
       </li>
     </ul>
   </div>
   <section class="home-section">
-      <h1>About Us</h1>
+      <h1>À propos de nous</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam nulla porttitor massa id neque aliquam. Aliquam id diam maecenas ultricies mi eget. Dui faucibus in ornare quam viverra. Commodo odio aenean sed adipiscing diam donec adipiscing. Velit laoreet id donec ultrices tincidunt arcu non sodales. Quis blandit turpis cursus in hac. Enim nec dui nunc mattis enim ut. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Facilisis gravida neque convallis a cras semper auctor.
 <br><br>
   Nisi est sit amet facilisis magna. Elit at imperdiet dui accumsan sit. Purus gravida quis blandit turpis cursus in hac habitasse platea. Dolor sit amet consectetur adipiscing. Nullam vehicula ipsum a arcu. Eget egestas purus viverra accumsan. Eget mi proin sed libero. Feugiat nisl pretium fusce id velit. At lectus urna duis convallis convallis. Eget mi proin sed libero enim sed faucibus turpis in. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Lacus vestibulum sed arcu non odio euismod lacinia at quis. Eros in cursus turpis massa tincidunt dui ut ornare lectus.
