--- a/Demo/index.html
+++ b/Demo/index.html
@@ -338,71 +338,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+    <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">Demo</div>
+        <div class="logo_name">Démo</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="index.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Page d'accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Page d'accueil</span>
       </li>
       <li>
        <a href="about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos de nous</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos de nous</span>
      </li>
      <li>
        <a href="contact.html">
         <i class='bx bxs-contact'></i>
-         <span class="links_name">Contact</span>
+         <span class="links_name">Contactez-nous</span>
        </a>
-       <span class="tooltip">Contact</span>
+       <span class="tooltip">Contactez-nous</span>
      </li>
-     <li>
-        <a href="pricing.html">
-          <i class='bx bxs-purchase-tag-alt' ></i>
-          <span class="links_name">Pricing</span>
-        </a>
-        <span class="tooltip">Pricing</span>
-      </li>
       <li>
         <a href="services.html">
           <i class='bx bxs-briefcase-alt-2' ></i>
-          <span class="links_name">Services</span>
+          <span class="links_name">Prestations de service</span>
         </a>
-        <span class="tooltip">Services</span>
+        <span class="tooltip">Prestations de service</span>
       </li>
     </ul>
   </div>
   <section class="home-section">
 <div class="header">
-         <h1>Template</h1>
+         <h1>Modèle</h1>
        </div>
        <br><br>
        <div style="width:100%;background-color:white;text-align:center;padding: 20px;">
-       <h2 style="font-size:30px;">About Us</h2>
+       <h2 style="font-size:30px;">À propos de nous</h2>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nullam non nisi est sit amet facilisis magna etiam tempor. Aliquet enim tortor at auctor urna nunc id. Pretium viverra suspendisse potenti nullam ac. Viverra vitae congue eu consequat ac. Diam quam nulla porttitor massa id. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Quis risus sed vulputate odio ut enim blandit. Est placerat in egestas erat imperdiet sed. Lectus proin nibh nisl condimentum id venenatis. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Enim tortor at auctor urna nunc id cursus metus aliquam. Scelerisque purus semper eget duis. At tellus at urna condimentum mattis pellentesque id. Quisque non tellus orci ac. Id velit ut tortor pretium viverra.</p>
        </div>
        <br><br>
        <div style="width:100%;background-color:white;text-align:center;padding: 20px;">
-       <h2 style="font-size:30px;">Services</h2>
+       <h2 style="font-size:30px;">Prestations de service</h2>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nullam non nisi est sit amet facilisis magna etiam tempor. Aliquet enim tortor at auctor urna nunc id. Pretium viverra suspendisse potenti nullam ac. Viverra vitae congue eu consequat ac. Diam quam nulla porttitor massa id. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Quis risus sed vulputate odio ut enim blandit. Est placerat in egestas erat imperdiet sed. Lectus proin nibh nisl condimentum id venenatis. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Enim tortor at auctor urna nunc id cursus metus aliquam. Scelerisque purus semper eget duis. At tellus at urna condimentum mattis pellentesque id. Quisque non tellus orci ac. Id velit ut tortor pretium viverra.
         </p>
        </div>
        <br><br>
        <div style="width:100%;background-color:white;text-align:center;padding: 20px;">
-       <h1>Pricing</h1>
+       <h1>Tarification</h1>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nullam non nisi est sit amet facilisis magna etiam tempor. Aliquet enim tortor at auctor urna nunc id. Pretium viverra suspendisse potenti nullam ac. Viverra vitae congue eu consequat ac. Diam quam nulla porttitor massa id. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Quis risus sed vulputate odio ut enim blandit. Est placerat in egestas erat imperdiet sed. Lectus proin nibh nisl condimentum id venenatis. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Enim tortor at auctor urna nunc id cursus metus aliquam. Scelerisque purus semper eget duis. At tellus at urna condimentum mattis pellentesque id. Quisque non tellus orci ac. Id velit ut tortor pretium viverra.</p>
        </div>
        <div class="footer">
-         <h2>&#169; One Future Web</h2>
+         <h2>&#169; Jst polyvalent lieu de travail</h2>
        </div> 
   </section>
 
