--- a/member/meeting.html
+++ b/member/meeting.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
-    <title>Member Meeting</title>
+    <title>Réunion des membres</title>
   </head>
   <body>
     <script>
@@ -20,7 +20,7 @@
   script.addEventListener("load", function (event) {
     const url = new URLSearchParams(window.location.search);
     const config = {
-      name: "Demo User",
+      name: "Utilisateur démo",
       meetingId: url.get("meetingId"),
       apiKey: "77e5fba3-3b60-4be6-a5f6-b5206081ca92",
       
@@ -46,7 +46,7 @@
            enabled: true,
            logoURL:
            "https://jstmstudio.tk/logo.png",
-           name: "JstMStudio",
+           name: "Jst polyvalent lieu de travail",
            poweredBy: false,
   },
       layout: {
@@ -71,7 +71,7 @@
 
       joinScreen: {
             visible: true, // Show the join screen ?
-            title: "JstMStudio", // Meeting title
+            title: "Jst polyvalent lieu de travail", // Meeting title
             meetingUrl: window.location.href, // Meeting joining url
           },
     
