--- a/repository/demo/index.html
+++ b/repository/demo/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
     <link rel="stylesheet" href="/style.css">
-    <title>Demo Home</title>
+    <title>Page d'accueil de la démo</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -574,29 +574,29 @@ body {font-family: "Lato", sans-serif;}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-  <div class="sidebar">
+    <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
-        <a href="home.html">
+        <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
-       <a href="about.html">
+       <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
-       <a href="documentation.html">
+       <a href="../documentation.html">
          <i class='bx bxs-info-square'></i>
          <span class="links_name">Documentation</span>
        </a>
@@ -604,65 +604,65 @@ body {font-family: "Lato", sans-serif;}
      </li>
      <li>
      <li>
-       <a href="project.html">
+       <a href="../project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
-       <a href="client.html">
+       <a href="../client.html">
         <i class='bx bx-user'></i>
          <span class="links_name">Client</span>
        </a>
        <span class="tooltip">Client</span>
      </li>
      <li>
-       <a href="web-app.html">
+       <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
-       <a href="api.html">
+       <a href="../api.html">
          <i class='bx bx-extension'></i>
          <span class="links_name">API</span>
        </a>
        <span class="tooltip">API</span>
      </li>
      <li>
-       <a href="store.html">
+       <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
   </div>
   <section class="home-section">
 <ul class="breadcrumb">
-  <li><a href="/home.html">Website</a></li>
-  <li><a href="/web-app.html">Web App</a></li>
-  <li><a href="">Services</a></li>
-  <li>Repository</li>
+<li><a href="/home.html">Site Web</a></li>
+   <li><a href="/web-app.html">Application Web</a></li>
+   <li><a href="">Services</a></li>
+   <li>Répertoire</li>
 </ul>
 <br>
 <img src="img.jpg" alt="Repository Logo" style="width:50%;margin-left: auto;margin-right: auto;width:100px;height:100px;display: block;">
-<h1>Demo</h1>
-<p>Bio Demo</p>
-<a class="button" style="text-decoration: none;"><i class='bx bx-world'></i> Public</a>
+<h1>Démo</h1>
+<p>Démo bio</p>
+<a class="button" style="text-decoration: none ;"><i class='bx bx-world'></i> Public</a>
 <br><br>
 <hr>
 <br><br>
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'README')" id="defaultOpen">README</button>
-  <button class="tablinks" onclick="openCity(event, 'About')">About</button>
-  <button class="tablinks" onclick="openCity(event, 'Branches')">Branches</button>
-  <button class="tablinks" onclick="openCity(event, 'Community')">Community</button>
-  <button class="tablinks" onclick="openCity(event, 'Contributors')">Contributors</button>
-  <button class="tablinks" onclick="openCity(event, 'History')">History</button>
+<button class="tablinks" onclick="openCity(event, 'README')" id="defaultOpen">README</button>
+   <button class="tablinks" onclick="openCity(event, 'À propos')">À propos</button>
+   <button class="tablinks" onclick="openCity(event, 'Branches')">Branches</button>
+   <button class="tablinks" onclick="openCity(event, 'Community')">Communauté</button>
+   <button class="tablinks" onclick="openCity(event, 'Contributors')">Contributeurs</button>
+   <button class="tablinks" onclick="openCity(event, 'History')">Historique</button>
 </div>
 
 <div id="README" class="tabcontent" style="height:500px;">
@@ -671,29 +671,29 @@ body {font-family: "Lato", sans-serif;}
 </div>
 
 <div id="About" class="tabcontent" style="height:500px;">
-  <h4>About.md</h4>
+  <h4>À propos de nous.md</h4>
   <object data="codes/about.html" style="width:100%;height:1000px;border:none"></object>
 </div>
 
 <div id="Branches" class="tabcontent" style="height:500px;">
-<h4 style="text-align:left;">Main <i class='bx bxs-down-arrow' ></i></h4>
-<button type="button" class="collapsible">about.html <i class='bx bxs-caret-down-circle'></i></button>
+<h4 style="text-align:left;">Principal <i class='bx bxs-down-arrow' ></i></h4>
+<button type="button" class="collapsible">à propos de nous.html <i class='bx bxs-caret-down-circle'></i></button>
 <div class="content">
-<p>Edited by Demo on 23 May 2022</p>
+<p>Modifié par Demo le 23 mai 2022</p>
 <div style="text-align:left;">
 <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FWeb-App%2Fblob%2Fmain%2Frepository%2Fdemo%2Fabout.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 </div>
-<button type="button" class="collapsible">branches.html <i class='bx bxs-caret-down-circle'></i></button>
+<button type="button" class="collapsible">bifurquer.html <i class='bx bxs-caret-down-circle'></i></button>
 <div class="content">
-<p>Edited by Demo on 23 May 2022</p>
+<p>Modifié par Demo le 23 mai 2022</p>
 <div style="text-align:left;">
 <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FWeb-App%2Fblob%2Fmain%2Frepository%2Fdemo%2Fbranches.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 </div>
-<button type="button" class="collapsible">community.html <i class='bx bxs-caret-down-circle'></i></button>
+<button type="button" class="collapsible">communauté.html <i class='bx bxs-caret-down-circle'></i></button>
 <div class="content">
-<p>Edited by Demo on 23 May 2022</p>
+<p>Modifié par Demo le 23 mai 2022</p>
 <div style="text-align:left;">
 <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FWeb-App%2Fblob%2Fmain%2Frepository%2Fdemo%community.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
@@ -717,33 +717,33 @@ for (i = 0; i < coll.length; i++) {
 </div>
 
 <div id="Community" class="tabcontent" style="height:500px;">
-  <h4>Community.md</h4>
+  <h4>Communauté.md</h4>
   <object data="codes/community.html" style="width:100%;height:1000px;border:none"></object>
 </div>
 
 <div id="Contributors" class="tabcontent" style="height:500px;">
-  <h4>Contributors.md</h4>
+  <h4>Contributeurs.md</h4>
   <object data="codes/contributors.html" style="width:100%;height:1000px;border:none"></object>
 </div>
 
 <div id="History" class="tabcontent" style="height:500px;">
-<h1>History</h1>
-<p><a href="#"><i class='bx bx-history'></i> View Live Changes</a> <!--- Pleasec replace # with the link to Github folder history --->
+<h1>Histoire</h1>
+<p><a href="#"><i class='bx bx-history'></i> Afficher les modifications en direct</a> <!--- Pleasec replace # with the link to Github folder history --->
 <br>
 <br>
 <div style="background-color:#f1f1f1;padding: 10px;">
-<h4>Demo</h4>
-<p>Updated <a href="#">index.html</a></p>
-<p>24 May 2022 12am UTC</p>
+<h4>Démo</h4>
+<p>Mise à jour de <a href="#">index.html</a></p>
+<p>24 mai 2022 à minuit UTC</p>
 </div>
 <div class="vl"></div>
 <br>
 <br>
 <br>
 <div style="background-color:#f1f1f1;padding:10px;">
-<h4>Demo</h4>
-<p>Updated <a href="#">about.html</a></p>
-<p>23 May 2022 11:58pm UTC</p>
+<h4>Démo</h4>
+<p>Mise à jour de <a href="#">about.html</a></p>
+<p>23 mai 2022 23h58 UTC</p>
 </div>
 </div>
 <script>
