--- a/repository/demo/codes/contributors.html
+++ b/repository/demo/codes/contributors.html
@@ -10,8 +10,8 @@
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-<h1>Contributors</h1>
-<p>Welcome to the contributors directory! A directory of all contributors that contribute and help the development of Demo. All contributors should be listed for their hard work and contributions to Demo repository so this is the directory of all contributors of Demo repository. Demo staff would like to thank you for contributing and helping this repository for free.</p>
+<h1>Contributeurs</h1>
+<p>Bienvenue dans l'annuaire des contributeurs ! Un répertoire de tous les contributeurs qui contribuent et aident au développement de Demo. Tous les contributeurs doivent être répertoriés pour leur travail acharné et leurs contributions au référentiel Demo, il s'agit donc du répertoire de tous les contributeurs du référentiel Demo. L'équipe de démonstration souhaite vous remercier d'avoir contribué et aidé gratuitement ce référentiel.</p>
 <ul style="text-align:left;">
-  <li><a href="/Web-App/Profile/Profile Template">Template</li>
-    </ul>
+   <li><a href="/Web-App/Profile/Profile Template">Modèle</li>
+     </ul>
