--- a/repository/demo/codes/community.html
+++ b/repository/demo/codes/community.html
@@ -10,9 +10,8 @@
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-<h1>Community</h1>
-<p>Welcome to Demo Community on Software and Website Developer Team Repository! A community tab for Demo to all Demo users and fan to communicate and discuss about Demo. A place where Demo favourite fans hangout.</p>
-<div id="graphcomment"></div>
+<h1>Communauté</h1>
+<p>Bienvenue dans la communauté de démonstration du référentiel Jst polyvalent lieu de travail ! Un onglet communautaire pour Demo à tous les utilisateurs et fans de Demo pour communiquer et discuter de Demo. Un endroit où les fans préférés de Demo se retrouvent.</p><div id="graphcomment"></div>
 <script type="text/javascript">
 
   /* - - - CONFIGURATION VARIABLES - - - */
