--- a/repository/demo/codes/community.html
+++ b/repository/demo/codes/community.html
@@ -11,7 +11,8 @@
   </head>
   <body>
 <h1>Communauté</h1>
-<p>Bienvenue dans la communauté de démonstration du référentiel Jst polyvalent lieu de travail ! Un onglet communautaire pour Demo à tous les utilisateurs et fans de Demo pour communiquer et discuter de Demo. Un endroit où les fans préférés de Demo se retrouvent.</p><div id="graphcomment"></div>
+<p>Bienvenue dans la communauté de démonstration du référentiel Jst polyvalent lieu de travail ! Un onglet communautaire pour Demo à tous les utilisateurs et fans de Demo pour communiquer et discuter de Demo. Un endroit où les fans préférés de Demo se retrouvent.</p>
+    <div id="graphcomment"></div>
 <script type="text/javascript">
 
   /* - - - CONFIGURATION VARIABLES - - - */
