--- a/Teenager Heroes/character.html
+++ b/Teenager Heroes/character.html
@@ -436,23 +436,23 @@ body {
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -466,9 +466,9 @@ body {
      <li>
        <a href="../project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="../client.html">
@@ -480,9 +480,9 @@ body {
      <li>
        <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="../api.html">
@@ -494,9 +494,9 @@ body {
      <li>
        <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -505,13 +505,13 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
   <h1 style="color:red;">Teenager Heroes</h1>
-  <a href="index.html"><i class='bx bx-home'></i> Home</a>
-  <a href="about.html"><i class='bx bxs-info-circle' ></i> About</a>
-  <a href="news.html"><i class='bx bx-news' ></i> News</a>
-  <a href="character.html"><i class='bx bx-male-female'></i> Character</a>
-  <a href="locations.html"><i class='bx bx-location-plus'></i> Locations</a>
-  <a href="story.html"><i class='bx bx-book' ></i> Story</a>
-  <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Vehicles</a>
+<a href="index.html"><i class='bx bx-home'></i> Accueil</a>
+   <a href="about.html"><i class='bx bxs-info-circle' ></i> À propos</a>
+   <a href="news.html"><i class='bx bx-news' ></i> Actualités</a>
+   <a href="character.html"><i class='bx bx-male-female'></i> Personnage</a>
+   <a href="locations.html"><i class='bx bx-location-plus'></i> Emplacements</a>
+   <a href="story.html"><i class='bx bx-book' ></i> Histoire</a>
+   <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Véhicules</a>
   </div>
 </div>
 
@@ -523,73 +523,73 @@ body {
 </div>
 <br>
 <div>
- <h1>Characters</h1>
-<p>Teenager Heroes book series featured many characters across many stories and seasons. Teenager Heroes book series contains many awesome designed character developed by Teenager Heroes team. All of our characters across all of Teenager Heroes stories is listed here:</p>
+ <h1>Personnages</h1>
+<p>La série de livres Teenager Heroes mettait en vedette de nombreux personnages à travers de nombreuses histoires et saisons. La série de livres Teenager Heroes contient de nombreux personnages conçus par l'équipe Teenager Heroes. Tous nos personnages dans toutes les histoires de Teenager Heroes sont répertoriés ici :</p>
 <br><br>
-<button class="collapsible2"><h3>Hu Jie（虎杰）</h3></button>
+<button class="collapsible2"><h3>Hu Jie</h3></button>
 <div class="content2">
 <p>
-  <li>Name: Hu Jie</li>
+  <li>Nom : Hu Jie</li>
   <br>
-<li>Gender: Male</li>
+<li>Sexe : masculin</li>
 <br>
-<li>Age: 14</li>
+<li>Âge : 14 ans</li>
 <br>
-<li>Ethnicity: Chinese</li>
+<li>Ethnie : chinoise</li>
 <br>
-<li>Occupation: Heroes</li>
+<li>Profession : Héros</li>
 <br>
-<li>Description: Hu Jie, a brave and fast hero in Teenager Heroes. The younger brother of Li Hui.</li>
+<li>Description : Hu Jie, un héros courageux et rapide dans Teenager Heroes. Le frère cadet de Li Hui.</li>
 <br>
-<li>Personality: </li>
-<li>He is brave. He protected his sister when they met trouble and also dared to face naughty villains.</li>
-<li>He is also fast at doing stuff too but very impatient at waiting.</li>
-<li>Playful, he could be playful when doing important stuff. </li>
-<li>Funny, he loves to make everyone else laugh, especially his sister.</li>
+<li>Personnalité : </li>
+<li>Il est courageux. Il a protégé sa sœur lorsqu'ils ont rencontré des problèmes et a également osé affronter de vilains méchants.</li>
+<li>Il est aussi rapide à faire des choses mais très impatient d'attendre.</li>
+<li>Joueur, il pouvait être joueur lorsqu'il faisait des choses importantes. </li>
+<li>Amusant, il adore faire rire tout le monde, surtout sa sœur.</li>
 <br>
-<li>Weakness:</li>
-<li>Impatient, he is impatient most of the time and couldn’t wait for others.</li>
+<li>Faiblesse :</li>
+<li>Impatient, il est impatient la plupart du temps et ne pouvait pas attendre les autres.</li>
 <br>
-<li>Power:</li>
-  <li>Speed
-  <li>Running, he could run very fast from location A to location B in a short amount of time. He could run as fast as lightning. </li>
-  <li>Tornado, he could run very fast to create a small tornado inside a small area that will create strong winds. </li>
-  <li>Energy generator, he could generate electric energy using his speed which could restore an out of power building.</li>
+<li>Alimentation :</li>
+  <li>Vitesse
+  <li>En courant, il pouvait courir très vite d'un emplacement A à un emplacement B en peu de temps. Il pouvait courir aussi vite que l'éclair. </li>
+  <li>Tornade, il pourrait courir très vite pour créer une petite tornade à l'intérieur d'une petite zone qui créera des vents forts. </li>
+  <li>Générateur d'énergie, il pourrait générer de l'énergie électrique en utilisant sa vitesse, ce qui pourrait restaurer un bâtiment hors tension.</li>
   <br>
-<li>Gadget:</li>
-<li>Shield, he could protect himself from attack by enemy and villains by hiding behind his shield.</li>
+<li>Gadget :</li>
+<li>Bouclier, il pouvait se protéger des attaques d'ennemis et de méchants en se cachant derrière son bouclier.</li>
 </div>
 <br>
-<button class="collapsible2"><h3>Li Hui （丽惠）</h3></button>
+<button class="collapsible2"><h3>Li Hui</h3></button>
 <div class="content2">
   <p>
-    <li>Name: Li Hui</li>
+    <li>Nom : Li Hui</li>
     <br>
-    <li>Gender: Female</li>
+    <li>Sexe : féminin</li>
     <br>
-    <li>Age: 14</li>
+    <li>Âge : 14 ans</li>
     <br>
-    <li>Ethnicity: Chinese</li>
+    <li>Ethnie : chinoise</li>
     <br>
-  <li>Occupation: Heroes</li>
+  <li>Profession : Héros</li>
   <br>
-  <li>Description: Li Hui, the older sister of Hu Jie. A shy but smart hero in the Teenager Heroes. </li>
+  <li>Description : Li Hui, la sœur aînée de Hu Jie. Un héros timide mais intelligent dans Teenager Heroes. </li>
   <br>
-  <li>Personality:</li>
-    <li>Li Hui is smart, she solves any hard problem easily.</li>
-    <li>Li Hui is also shy, she is scared of most people that she meets.</li>
-    <li>Sweet and Careful, she could be careful about taking care of her younger brother.</li>
+  <li>Personnalité :</li>
+    <li>Li Hui est intelligente, elle résout facilement n'importe quel problème difficile.</li>
+    <li>Li Hui est également timide, elle a peur de la plupart des gens qu'elle rencontre.</li>
+    <li>Douce et attentionnée, elle pouvait être prudente lorsqu'elle s'occupait de son jeune frère.</li>
   <br>
-  <li>Weakness:</li>
-    <li>Shy, she is scared to face most enemies. She easily gets scared off by scary enemies.</li>
+  <li>Faiblesse :</li>
+    <li>Timide, elle a peur d'affronter la plupart des ennemis. Elle est facilement effrayée par des ennemis effrayants.</li>
 <br>
-<li>Power</li>
-    <li>Technology</li>
-<li>Computing, she could do some computing like setting up a computer, etc. She could set up a new computer to do stuff that she needs.</li>
-<li>Hacking, she could hack into other technology infrastructure and make it inaccessible or insecure software.</li>
+<li>Puissance</li>
+    <li>Technologie</li>
+<li>En informatique, elle pourrait faire de l'informatique, comme configurer un ordinateur, etc. Elle pourrait configurer un nouvel ordinateur pour faire ce dont elle a besoin.</li>
+<li>En piratant, elle pourrait pirater d'autres infrastructures technologiques et en faire des logiciels inaccessibles ou non sécurisés.</li>
   <br>
 <li>Gadget</li>
-<li>Bots, she has 2 bots accompanying her at all times that could help to carry stuff, defend her and etc. She could program the bots to do whatever she needs.</li>
+<li>Bots, elle a 2 bots qui l'accompagnent à tout moment et qui pourraient l'aider à transporter des choses, à la défendre, etc. Elle pourrait programmer les bots pour qu'ils fassent tout ce dont elle a besoin.</li>
   </li>
   </ul>
 </div>
@@ -613,8 +613,8 @@ for (i = 0; i < coll.length; i++) {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
