--- a/Teenager Heroes/locations.html
+++ b/Teenager Heroes/locations.html
@@ -436,23 +436,23 @@ body {
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -466,9 +466,9 @@ body {
      <li>
        <a href="../project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="../client.html">
@@ -480,9 +480,9 @@ body {
      <li>
        <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="../api.html">
@@ -494,9 +494,9 @@ body {
      <li>
        <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -505,13 +505,13 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
   <h1 style="color:red;">Teenager Heroes</h1>
-  <a href="index.html"><i class='bx bx-home'></i> Home</a>
-  <a href="about.html"><i class='bx bxs-info-circle' ></i> About</a>
-  <a href="news.html"><i class='bx bx-news' ></i> News</a>
-  <a href="character.html"><i class='bx bx-male-female'></i> Character</a>
-  <a href="locations.html"><i class='bx bx-location-plus'></i> Locations</a>
-  <a href="story.html"><i class='bx bx-book' ></i> Story</a>
-  <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Vehicles</a>
+<a href="index.html"><i class='bx bx-home'></i> Accueil</a>
+   <a href="about.html"><i class='bx bxs-info-circle' ></i> À propos</a>
+   <a href="news.html"><i class='bx bx-news' ></i> Actualités</a>
+   <a href="character.html"><i class='bx bx-male-female'></i> Personnage</a>
+   <a href="locations.html"><i class='bx bx-location-plus'></i> Emplacements</a>
+   <a href="story.html"><i class='bx bx-book' ></i> Histoire</a>
+   <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Véhicules</a>
   </div>
 </div>
 
@@ -523,30 +523,30 @@ body {
 </div>
 <br>
 <div>
- <h1>Locations</h1>
-<p>Teenager Heroes book series contains many awesome locations, developed and built by Teenager Heroes team. All locations listed here are the primary locations premiered in many seasons of One Future Unified Team. We contains a list of all locations in Teenager Heroes here.</p>
+ <h1>Lieux</h1>
+<p>La série de livres Teenager Heroes contient de nombreux lieux impressionnants, développés et construits par l'équipe Teenager Heroes. Tous les emplacements répertoriés ici sont les principaux emplacements créés au cours de nombreuses saisons de One Future Unified Team. Nous avons ici une liste de tous les lieux de Teenager Heroes.</p>
 <br>
   <button type="button" class="collapsible2"><h2>Perle</h2></button>
-<div class="content2" syle="padding:20px;">
-<p style="text-align:center;">Perle is the hometown of Li Hui and Hu Jie, where they grew up. Perle is an advanced city. Perle is the main city in Teenager Heroes Season 1. Perle featured the best, cleanest environment. Perle is set in a place in the future.</p>
+<div class="content2" syle="padding:20px ;">
+<p style="text-align:center;">Perle est la ville natale de Li Hui et Hu Jie, où ils ont grandi. Perle est une ville avancée. Perle est la ville principale de la saison 1 de Teenager Heroes. Perle présentait l'environnement le meilleur et le plus propre. Perle se déroule dans un endroit du futur.</p>
 <br>
-  <h3 style="text-align:center;">Places</h3>
+  <h3 style="text-align:center;">Lieux</h3>
   <br>
-  <li>VRzoo: VRzoo is a zoo in Perle. It is a virtual reality zoo for visitors to see animals in the zoo using virtual reality.</li>
+  <li>VRzoo : VRzoo est un zoo à Perle. Il s'agit d'un zoo de réalité virtuelle permettant aux visiteurs de voir les animaux du zoo en utilisant la réalité virtuelle.</li>
   <br>
-  <li>VRmuseum: VRmuseum is a big museum in Perle. It is a virtual reality museum for everyone to visit the entire museum without walking and visiting everything on display using virtual reality.</li>
+  <li>VRmuseum : VRmuseum est un grand musée à Perle. Il s'agit d'un musée de réalité virtuelle permettant à chacun de visiter l'ensemble du musée sans marcher et de visiter tout ce qui est exposé en utilisant la réalité virtuelle.</li>
   <br>
-  <li>VRmall: VRmall is a mega shopping mall in Perle. It is a virtual reality mall for everyone to visit and buy stuff. Visitors could use VR to visit the virtual reality mall to buy stuff.</li>
+  <li>VRmall : VRmall est un méga centre commercial à Perle. C'est un centre commercial de réalité virtuelle que tout le monde peut visiter et acheter. Les visiteurs pouvaient utiliser la réalité virtuelle pour visiter le centre commercial de réalité virtuelle afin d'acheter des articles.</li>
   <br>
-  <li>Forest: Perle also has a mega forest too. Perle forest grows many types of trees, from blueberries to bananas. The mega forest also helps to keep the environment clean too.</li>
+  <li>Forêt : Perle possède également une méga forêt. La forêt de Perle pousse de nombreux types d'arbres, des myrtilles aux bananes. La méga forêt aide également à garder l'environnement propre.</li>
   <br>
-  <li>VRschool: Perle also has a school too.  Perle children could attend the school to learn in virtual reality. Perle provides the best technology for students to study.</li>
+  <li>VRschool : Perle a aussi une école. Les enfants de Perle pouvaient fréquenter l'école pour apprendre en réalité virtuelle. Perle fournit la meilleure technologie pour que les étudiants puissent étudier.</li>
   <br>
-  <li>VRcinema: Perle has a cinema for all citizens too. Perle cinema lets all watchers watch a movie in virtual reality. Watchers could watch movies on VRcinema with their family and friends.</li>
+  <li>VRcinema : Perle a aussi un cinéma pour tous les citoyens. Perle cinéma permet à tous les spectateurs de regarder un film en réalité virtuelle. Les spectateurs pouvaient regarder des films sur VRcinema avec leur famille et leurs amis.</li>
   <br>
-  <li>VRbank: Perle also has a bank too. VRbank lets everyone save money in the bank inside the virtual reality world. VRbank also lets everyone save money in the virtual reality bank too.</li>
+  <li>VRbank : Perle possède également une banque. VRbank permet à chacun d'économiser de l'argent à la banque dans le monde de la réalité virtuelle. VRbank permet également à chacun d'économiser de l'argent dans la banque de réalité virtuelle.</li>
   <br>
-  <li>Peaceful Central（宁中）: Peaceful Central is the neighborhood where the twins home are and lives. Peaceful Central is a wonderful and clean neighborhood.</li>
+  <li>Peaceful Central: Peaceful Central est le quartier où se trouvent et vivent les jumeaux. Peaceful Central est un quartier magnifique et propre.</li>
   </div>
 
 <script>
@@ -568,8 +568,8 @@ for (i = 0; i < coll.length; i++) {
 <br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
