--- a/Teenager Heroes/story.html
+++ b/Teenager Heroes/story.html
@@ -437,23 +437,23 @@ body {
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -467,9 +467,9 @@ body {
      <li>
        <a href="../project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="../client.html">
@@ -481,9 +481,9 @@ body {
      <li>
        <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="../api.html">
@@ -495,9 +495,9 @@ body {
      <li>
        <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -506,13 +506,13 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
   <h1 style="color:red;">Teenager Heroes</h1>
-  <a href="index.html"><i class='bx bx-home'></i> Home</a>
-  <a href="about.html"><i class='bx bxs-info-circle' ></i> About</a>
-  <a href="news.html"><i class='bx bx-news' ></i> News</a>
-  <a href="character.html"><i class='bx bx-male-female'></i> Character</a>
-  <a href="locations.html"><i class='bx bx-location-plus'></i> Locations</a>
-  <a href="story.html"><i class='bx bx-book' ></i> Story</a>
-  <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Vehicles</a>
+<a href="index.html"><i class='bx bx-home'></i> Accueil</a>
+   <a href="about.html"><i class='bx bxs-info-circle' ></i> À propos</a>
+   <a href="news.html"><i class='bx bx-news' ></i> Actualités</a>
+   <a href="character.html"><i class='bx bx-male-female'></i> Personnage</a>
+   <a href="locations.html"><i class='bx bx-location-plus'></i> Emplacements</a>
+   <a href="story.html"><i class='bx bx-book' ></i> Histoire</a>
+   <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Véhicules</a>
   </div>
 </div>
 
@@ -524,20 +524,20 @@ body {
 </div>
 <br>
 <div>
-<h1>Story</h1>
-<p>Teenager Heroes book series contains a tons of amazing and interesting book stories, written by the Teenager Heroes team. Each stories of Teenager Heroes featured the Chinese twins, Li Hui and Hu Jie go on an exciting adventures. Each stories is expected around 21-30 minutes standard reading times too. You could also read each and all stories of Teenager Heroes here.</p>
-  <br>
-  <hr>
-  <br>
-  <h2>Season 1</h2>
-  <p>Season 1 is the first season of Teenager Heroes. Season 1 will featured Hu Jie and Li Hui in their hometown, Perle. </p>
-  <br>
-  <h4>No story available</h4>
+<h1>Histoire</h1>
+<p>La série de livres Teenager Heroes contient une tonne d'histoires de livres étonnantes et intéressantes, écrites par l'équipe Teenager Heroes. Chaque histoire de Teenager Heroes mettait en vedette les jumeaux chinois, Li Hui et Hu Jie, qui partent pour des aventures passionnantes. Chaque histoire devrait également durer environ 21 à 30 minutes. Vous pouvez également lire toutes les histoires de Teenager Heroes ici.</p>
+   <br>
+   <hr>
+   <br>
+   <h2>Saison 1</h2>
+   <p>La saison 1 est la première saison de Teenager Heroes. La saison 1 mettra en vedette Hu Jie et Li Hui dans leur ville natale, Perle. </p>
+   <br>
+   <h4>Aucune histoire disponible</h4>
 <br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
