--- a/Teenager Heroes/locations.html
+++ b/Teenager Heroes/locations.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
-    <title>Locations</title>
+    <title>Emplacement</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
