--- a/Teenager Heroes/story/development.html
+++ b/Teenager Heroes/story/development.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'G-ZM4LK5K0LJ');
 </script>
-    <title>Development</title>
+    <title>Développement</title>
     <style>
 .tab {
   float: left;
@@ -65,36 +65,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
-<h1>Story Title</h1>
-<p><strong>Story Description</strong></p>
+<h1>Titre de l'histoire</h1>
+<p><strong>Description de l'histoire</strong></p>
 <br>
 <div style="text-align:left;">
-<li>Licenses: (CC) Attrib. NonCommercial</li>
-<li>Reading Time: (200 Word Per Minutes)</li>
-<li>Parts: </li>
-<li>Views:</li>
+<li>Licence : (CC) Attrib. Non commercial</li>
+<li>Temps de lecture : (200 mots par minute)</li>
+<li>Pièces : </li>
+<li>Vues :</li>
 </div>
 </div>
 <br>
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'Part1')" id="defaultOpen">Part 1</button>
-  <button class="tablinks" onclick="openCity(event, 'Part2')">Part 2</button>
-  <button class="tablinks" onclick="openCity(event, 'Part3')">Part 3</button>
+<button class="tablinks" onclick="openCity(event, 'Part1')" id="defaultOpen">Partie 1</button>
+   <button class="tablinks" onclick="openCity(event, 'Part2')">Partie 2</button>
+   <button class="tablinks" onclick="openCity(event, 'Part3')">Partie 3</button>
 </div>
 
 <div id="Part1" class="tabcontent">
-  <h1>Day 1</h1>
-  <p></p>
+   <h1>Jour 1</h1>
+   <p></p>
 </div>
 
 <div id="Part2" class="tabcontent">
-  <h1>Day 2</h1>
-  <p></p> 
+   <h1>Jour 2</h1>
+   <p></p>
 </div>
 
 <div id="Part3" class="tabcontent">
-  <h1>Day 3</h1>
-  <p></p>
+   <h1>Jour 3</h1>
+   <p></p>
+   </div>
 </div><br><br><br><br><br><br><br><br>
 
 <script>
