--- a/Teenager Heroes/index.html
+++ b/Teenager Heroes/index.html
@@ -441,23 +441,23 @@ div.desc {
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">JstMStudio</div>
+        <div class="logo_name">Jst polyvalent lieu de travail</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
       <li>
         <a href="../home.html">
           <i class='bx bx-home'></i>
-          <span class="links_name">Home</span>
+          <span class="links_name">Accueil</span>
         </a>
-         <span class="tooltip">Home</span>
+         <span class="tooltip">Accueil</span>
       </li>
       <li>
        <a href="../about.html">
          <i class='bx bx-info-circle'></i>
-         <span class="links_name">About</span>
+         <span class="links_name">À propos</span>
        </a>
-       <span class="tooltip">About</span>
+       <span class="tooltip">À propos</span>
      </li>
      <li>
      <li>
@@ -471,9 +471,9 @@ div.desc {
      <li>
        <a href="../project.html">
          <i class='bx bxs-briefcase-alt-2'></i>
-         <span class="links_name">Project</span>
+         <span class="links_name">Projet</span>
        </a>
-       <span class="tooltip">Project</span>
+       <span class="tooltip">Projet</span>
      </li>
      <li>
        <a href="../client.html">
@@ -485,9 +485,9 @@ div.desc {
      <li>
        <a href="../web-app.html">
         <i class='bx bx-log-in'></i>
-         <span class="links_name">Web App</span>
+         <span class="links_name">Application Web</span>
        </a>
-       <span class="tooltip">Web App</span>
+       <span class="tooltip">Application Web</span>
      </li>
       <li>
        <a href="../api.html">
@@ -499,9 +499,9 @@ div.desc {
      <li>
        <a href="../store.html">
          <i class='bx bx-store-alt'></i>
-         <span class="links_name">Store</span>
+         <span class="links_name">Magasin</span>
        </a>
-       <span class="tooltip">Store</span>
+       <span class="tooltip">Magasin</span>
      </li>
      <li>
     </ul>
@@ -510,13 +510,13 @@ div.desc {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
   <h1 style="color:red;">Teenager Heroes</h1>
-  <a href="index.html"><i class='bx bx-home'></i> Home</a>
-  <a href="about.html"><i class='bx bxs-info-circle' ></i> About</a>
-  <a href="news.html"><i class='bx bx-news' ></i> News</a>
-  <a href="character.html"><i class='bx bx-male-female'></i> Character</a>
-  <a href="locations.html"><i class='bx bx-location-plus'></i> Locations</a>
-  <a href="story.html"><i class='bx bx-book' ></i> Story</a>
-  <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Vehicles</a>
+<a href="index.html"><i class='bx bx-home'></i> Accueil</a>
+   <a href="about.html"><i class='bx bxs-info-circle' ></i> À propos</a>
+   <a href="news.html"><i class='bx bx-news' ></i> Actualités</a>
+   <a href="character.html"><i class='bx bx-male-female'></i> Personnage</a>
+   <a href="locations.html"><i class='bx bx-location-plus'></i> Emplacements</a>
+   <a href="story.html"><i class='bx bx-book' ></i> Histoire</a>
+   <a href="vehicles.html"><i class='bx bxs-plane-alt'></i> Véhicules</a>
   </div>
 </div>
 
@@ -529,19 +529,19 @@ div.desc {
 
 <div>
   <img src="https://github.com/One-Future-Unified-Team/Teenager-Heroes/blob/main/images/logo.png?raw=true" alt="Logo" style="width:400px;height:400px;">
-  <div style="float:center;"><h1 style="color:green;">Home</h1><h3 style="color:green;"><strong>Welcome</strong> to <strong>Teenager Heroes</strong> official website!</h3></div>
+  <div style="float:center;"><h1 style="color:green;">Accueil</h1><h3 style="color:green;"><strong>Bienvenue</strong> sur le site officiel de <strong>Teenager Heroes</strong> !</h3></div>
   <br>
   <hr>
   <br>
-<h2>About Us</h2>
-<p>In 2100, there are two teenage Chinese twins heroes, named Li Hui and Hu Jie with their parents in Perle out for an adventure to protect their mighty city!</p>
-  <br>
-  <hr>
-  <br>
-    <h2>Reading Platforms</h2>
-  <br>
-  <li><h3>Wattpad</h3></li>
-  <li><h3>JstMStudio</h3></li>
+<h2>À propos de nous</h2>
+<p>En 2100, il y a deux héros jumeaux chinois adolescents, nommés Li Hui et Hu Jie avec leurs parents à Perle partant à l'aventure pour protéger leur puissante ville !</p>
+   <br>
+   <h>
+   <br>
+     <h2>Plateformes de lecture</h2>
+   <br>
+   <li><h3>Wattpad</h3></li>
+   <li><h3>Jst polyvalent lieu de travail</h3></li>
   <br>
   <hr>
   <br>
@@ -565,8 +565,8 @@ div.desc {
 <br><br><br><br><br><br><br><br><br><br><br>
   <hr>
   <br>
-  <h1>Themes</h1>
-<p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
+<h1>Thèmes</h1>
+<p>Vous pouvez personnaliser les thèmes de Jst polyvalent lieu de travail dans une couleur que vous préférez. Sélectionnez et choisissez parmi le jeu de couleurs ci-dessous pour faire de l'interface utilisateur de Jst polyvalent lieu de travail votre préférence de couleur.</p>
 <br>
 <div style="float:left;text-align:center;padding:10px;">
 <button onclick="myFunction()" style="background-color: black;" class="button2"></button>
