--- a/help-articles.html
+++ b/help-articles.html
@@ -64,56 +64,56 @@ td, th {
     </style>
     </head>
 <body>
-  <h1>JstMStudio Help Articles</h1>
-  <p style="text-align:center;"><strong>A place to get help articles and error codes answered. There are many help articles codes provided and used by JstMStudio. Please search for your error codes in the search bar to looks for the information about it. </strong></p>
+<h1>Articles d'aide de Jst polyvalent lieu de travail</h1>
+  <p style="text-align:center;"><strong>Un endroit pour obtenir des articles d'aide et des réponses aux codes d'erreur. Il existe de nombreux codes d'articles d'aide fournis et utilisés par Jst polyvalent lieu de travail. Veuillez rechercher vos codes d'erreur dans la barre de recherche pour rechercher les informations à ce sujet. </strong></p>
   <br><br>
-  <table>
+  <tableau>
     <tr>
-      <th>Title</th>
+      <th>Titre</th>
       <th>Codes</th>
     </tr>
     <tr>
-      <td>Account Banned</td>
+      <td>Compte banni</td>
       <td>13841</td>
     </tr>
     <tr>
-      <td>Account Deleted</td>
+      <td>Compte supprimé</td>
       <td>67381</td>
     </tr>
     <tr>
-      <td>Account Disabled</td>
+      <td>Compte désactivé</td>
       <td>89651</td>
     </tr>
     <tr>
-      <td>Account Not To Be Found</td>
+      <td>Compte introuvable</td>
       <td>10915</td>
     </tr>
     <tr>
-      <td>Adjusting Donation</td>
+      <td>Ajuster le don</td>
       <td>52107</td>
     </tr>
     <tr>
-      <td>Didn't COPPA required each software to be 13?</td>
+      <td>La COPPA n'exigeait-elle pas que chaque logiciel soit 13 ?</td>
       <td>98106</td>
     </tr>
     <tr>
-      <td>What Does Donation Do?</td>
+      <td>À quoi sert le don ?</td>
       <td>61029</td>
     </tr>
     <tr>
-      <td>Embed</td>
+      <td>Intégrer</td>
       <td>92657</td>
     </tr>
     <tr>
-      <td>How Could I Donate?</td>
+      <td>Comment puis-je faire un don ?</td>
       <td>78526</td>
     </tr>
       <tr>
-      <td>How Old Is It Required To Use JstMStudio Projects?</td>
+      <td>Quel âge faut-il pour utiliser les projets Jst polyvalent lieu de travail ?</td>
       <td>23195</td>
     </tr>
     <tr>
-      <td>Payment Processor</td>
+      <td>Processeur de paiement</td>
       <td>89103</td>
     </tr>
   </table>
